--- a/index.html
+++ b/index.html
@@ -4,9 +4,30 @@
 
 <h2>Projects</h2>
 
-<!-- TODO: Erase one of these two. Replace the 'href' link below with a link to your WebGL build page. -->
 <ul>
-<li><a href="https://dgeorgi.itch.io/p1-zelda">The Legend of Zelda (Unity Remaster)</a></li>
+    <li>
+        <a href="https://dgeorgi.itch.io/p1-zelda">The Legend of Zelda (Unity Remaster)</a>
+        
+        <!-- Contributions Section -->
+        <h3>Contributions</h3>
+        <ul>
+            <li>Worked on Enemy Movement AI logic</li>
+            <li>Worked on Damage Health interactions between player and enemies</li>
+            <li>Worked on Sword component and Sword Projectile</li>
+            <li>Worked on Arrow and Boomerang Alternate Weapons</li>
+	    <li>Worked on Portal Gun and Portals</li>
+	    <li>Worked on Sprites For Custom Portal Level</li>
+            <!-- ... you can add more contributions as required -->
+        </ul>
+
+        <!-- Technology Used Section -->
+        <h3>Technology Used</h3>
+        <ul>
+            <li>C#</li>
+            <li>Unity</li>
+            <li>Piskel</li>
+        </ul>
+    </li>
 </ul>
 
 <!-- TIP: Rename this file "index.html", and it will become the default landing page whenever someone navigates their browser to your domain. -->
