Updated more contributions

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <h3>Contributions</h3>
         <ul>
             <li>Worked on Enemy Movement AI logic</li>
+            <li>Worked on Player Grid-Based Movement</li>
             <li>Worked on Damage Health interactions between player and enemies</li>
             <li>Worked on Sword component and Sword Projectile</li>
             <li>Worked on Arrow and Boomerang Alternate Weapons</li>
