--- a/index.html
+++ b/index.html
@@ -29,6 +29,29 @@
             <li>Piskel</li>
         </ul>
     </li>
+    <!-- Added project "Snowball Saga - Prototype" -->
+    <li>
+        <a href="https://dgeorgi.itch.io/snowball-saga">Snowball Saga - Prototype</a>
+        
+        <!-- Contributions Section -->
+        <!-- You can fill this section with your contributions to the project -->
+        <h3>Contributions</h3>
+        <ul>
+            <li>Created all momvement and challenges</li>
+            <li>Designed levels and menus</li>
+            <!-- ... you can add more contributions as required -->
+        </ul>
+
+        <!-- Technology Used Section -->
+        <!-- You can fill this section with the technologies used in the project -->
+        <h3>Technology Used</h3>
+        <ul>
+            <li>Unity</li>
+            <li>C#</li>
+	    <li>Audacity</li>
+            <!-- ... you can add more technologies as required -->
+        </ul>
+    </li>
 </ul>
 
 <!-- TIP: Rename this file "index.html", and it will become the default landing page whenever someone navigates their browser to your domain. -->
