--- a/index.html
+++ b/index.html
@@ -52,6 +52,34 @@
             <!-- ... you can add more technologies as required -->
         </ul>
     </li>
+    <!-- Added project "Rent-A-Bot" -->
+    <li>
+        <a href="https://bossmanstudios.itch.io/rent-a-bot">Rent-A-Bot</a>
+        
+        <!-- Contributions Section -->
+        <!-- You can fill this section with your contributions to the project -->
+        <h3>Contributions</h3>
+        <ul>
+            <li>Movement and player controls</li>
+            <li>Designed Level 2 and Main Menu</li>
+	    <li>Created Models for Players, objects, and Machines</li>
+	    <li>Worked On Challenges for Players</li>
+	    <li>Handle Win/Loss Logic</li>
+            <!-- ... you can add more contributions as required -->
+        </ul>
+
+        <!-- Technology Used Section -->
+        <!-- You can fill this section with the technologies used in the project -->
+        <h3>Technology Used</h3>
+        <ul>
+            <li>Unity</li>
+            <li>C#</li>
+	    <li>Audacity</li>
+	    <li>Blender</li>
+	    <li>Adobe Premiere Pro</li>
+            <!-- ... you can add more technologies as required -->
+        </ul>
+    </li>
 </ul>
 
 <!-- TIP: Rename this file "index.html", and it will become the default landing page whenever someone navigates their browser to your domain. -->
