Added Divided Engine to portfolio

--- a/index.html
+++ b/index.html
@@ -80,6 +80,43 @@
             <!-- ... you can add more technologies as required -->
         </ul>
     </li>
+	<!-- Added Project "Divided Engine" -->
+	<li>
+		<a href="https://www.youtube.com/watch?v=1WlR8l3pqfg&ab_channel=DavidGeorgi">Divided Engine</a>
+		
+		<!-- Contributions Section -->
+		<!-- You can fill this section with your contributions to the project -->
+		<h3>Contributions</h3>
+		<ul>
+			<!-- List your specific contributions here -->
+			<li>Designed the architecture of the engine</li>
+			<li>Implemented scene management using Tiled</li>
+			<li>Integrated physics with Box2D</li>
+			<li>Developed custom scripting with Lua for gameplay logic</li>
+			<!-- Add more contributions as needed -->
+		</ul>
+
+		<!-- Technology Used Section -->
+		<h3>Technology Used</h3>
+		<ul>
+			<li>C++</li>
+			<li>Lua</li>
+			<li>GLM</li>
+			<li>LuaBridge</li>
+			<li>SDL</li>
+			<li>Box2D</li>
+			<li>Tiled</li>
+		</ul>
+		
+		<!-- Description -->
+		<h3>Description</h3>
+		<p>A mini 2D game engine that uses Tiled for scene creation!</p>
+		
+		<!-- Link to Video Demonstration -->
+		<h3>Video Demonstration</h3>
+		<a href="https://www.youtube.com/watch?v=1WlR8l3pqfg&ab_channel=DavidGeorgi">Watch here</a>
+	</li>
+
 </ul>
 
 <!-- TIP: Rename this file "index.html", and it will become the default landing page whenever someone navigates their browser to your domain. -->
