--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </li>
 	<!-- Added Project "Divided Engine" -->
 	<li>
-		<h2><a href="https://www.youtube.com/watch?v=1WlR8l3pqfg&ab_channel=DavidGeorgi">Divided Engine</a></h2>
+		<h2><a href="https://github.com/D-Georgi/DividedEngine">Divided Engine</a></h2>
 		
 		<!-- Contributions Section -->
 		<!-- You can fill this section with your contributions to the project -->
